--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "einops==0.6.1",
     "einops-exts==0.0.4",
     "filelock==3.18.0",
+    "flash-attn==2.3.6; sys_platform != 'darwin'",
     "fsspec==2025.7.0",
     "fvcore==0.1.5.post20221221",
     "hf-xet==1.1.5",
@@ -40,6 +41,7 @@ dependencies = [
     "nvidia-ml-py==12.575.51; sys_platform != 'darwin'",
     "nvidia-nccl-cu11==2.14.3; sys_platform != 'darwin'",
     "nvidia-nvtx-cu11==11.7.91; sys_platform != 'darwin'",
+    "openai>=1.97.1",
     "opencv-python==4.8.1.78",
     "orjson==3.11.0",
     "packaging==25.0",
@@ -66,6 +68,7 @@ dependencies = [
     "scikit-learn==1.6.1",
     "scipy==1.13.1",
     "sentencepiece==0.1.99",
+    "setuptools>=80.9.0",
     "shortuuid==1.0.13",
     "six==1.17.0",
     "sympy==1.14.0",
