--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,4 +99,4 @@ requires-python = ">=3.9"
 
 
 [tool.uv]
-index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
+index-url = "https://mirrors.aliyun.com/pypi/simple/"
